--- a/zerozero-0-0/client/style/style.css
+++ b/zerozero-0-0/client/style/style.css
@@ -12,6 +12,36 @@ p {
     font-size: 1.5rem;
 } 
 
+.add-todo {
+    padding-bottom: 20px;
+    width: 16rempx;
+    height: 2rem;
+    margin: 0 auto;
+    display: flex;
+    gap: 1rem;
+    align-items: center;
+    justify-content: center;
+}
+
+input {
+    border: 3px solid #000;
+    height: 1.2em;
+    width: 11rem;
+}
+
+button {
+    background: #87cefa;
+    border-radius: 5px;
+    border: none;
+    border: 1px solid #ccc;
+}
+
+button:hover {
+    opacity: .8;
+    transition: .3s;
+    transform: translateX(2px);
+}
+
 ul {
     width: 600px;
     height: auto;
@@ -39,3 +69,5 @@ li:hover {
     background: #ccc;
     transition: .2s;
 }
+
+
